--- a/index.html
+++ b/index.html
@@ -5,7 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>weather-search-website</title>
 </head>
-<body>
-    <h1>Hello World!</h1>
+<form>
+    <input type="search" placeholder="Enter a city.." required>
+    <input type="submit" value="Search">
+</form>
+<body><div>
+    <h1>Kabul</h1>
+    <P>Saturday 15:35, moderate rain
+        <br>
+        Humidity: 87%, Wind: 7.2km/h</P>
+    </div><p><div>
+            ☀️
+            14
+            °C           
+        </div></p>
+    <footer>
+        This project was coded by <a href="https://github.com/YariFariba-art">Fariba Yari</a>
+        and is<a href="https://github.com/YariFariba-art/weather-search-website"> on GitHub</a> and <a href="https://www.netlify.com/">hosted on Netlify</a>
+    </footer>
+
 </body>
 </html>
