--- a/index.html
+++ b/index.html
@@ -4,25 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>weather-search-website</title>
-</head>
-<form>
-    <input type="search" placeholder="Enter a city.." required>
-    <input type="submit" value="Search">
-</form>
-<body><div>
-    <h1>Kabul</h1>
-    <P>Saturday 15:35, moderate rain
-        <br>
-        Humidity: 87%, Wind: 7.2km/h</P>
-    </div><p><div>
-            ☀️
-            14
-            °C           
-        </div></p>
+    <link rel="stylesheet" href="index.css">
+</head >
+<body>
+  <div class="container">
+  <header>
+    <form id="city">
+      <input
+        type="search"placeholder="Enter a city.." required id="search"/>
+      <input type="submit" value="Search" id="submit" />
+    </form>
+  </header>
+  <main>
+    <br>
+        <h1>Kabul</h1>
+        <div class="weather-info">
+        <p><span id="current-date">
+          Saturday 15:32</span>, moderate rain <br />
+          Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
+        </p>
+        <section>
+          <span class="emoji">☀️</span>14<small>°C</small width="1px" >
+        </section>
+      </div>
+  </main> 
     <footer>
-        This project was coded by <a href="https://github.com/YariFariba-art">Fariba Yari</a>
-        and is<a href="https://github.com/YariFariba-art/weather-search-website"> on GitHub</a> and <a href="https://www.netlify.com/">hosted on Netlify</a>
+        This project was coded by <a href="https://github.com/YariFariba-art">Fariba Yari </a> 
+        and is<a href="https://github.com/YariFariba-art/weather-search-website"> on GitHub</a> 
+        and <a href="https://www.netlify.com/">hosted on Netlify</a>
     </footer>
-
+</div>
 </body>
 </html>
