--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </header>
   <main>
     <br>
-        <h1>Kabul</h1>
+        <h1 id="currentCity">Kabul</h1>
         <div class="weather-info">
         <p><span id="current-date">
           Saturday 15:32</span>, moderate rain <br />
@@ -34,5 +34,6 @@
         and <a href="https://www.netlify.com/">hosted on Netlify</a>
     </footer>
 </div>
+<script src="index.js"></script>
 </body>
 </html>
