Axios and API Integration

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
         </p>
         <section>
-          <span class="emoji">☀️</span>14<small>°C</small width="1px" >
+          <span class="emoji">☀️</span><span id="weather-degree">14</span><small>°C</small width="1px" >
         </section>
       </div>
   </main> 
@@ -34,6 +34,7 @@
         and <a href="https://www.netlify.com/">hosted on Netlify</a>
     </footer>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="index.js"></script>
 </body>
 </html>
