Injected weather-details

--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@
   </header>
   <main>
     <br>
-        <h1 id="currentCity">Kabul</h1>
+        <h1 id="currentCity"></h1>
         <div class="weather-info">
         <p><span id="current-date">
-          Saturday 15:32</span>, moderate rain <br />
-          Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
+          </span>, 
+          <span id="description">moderate rain</span> <br />
+          Humidity: <strong><span id="humidity"></span></strong>,Wind:
+          <strong><span id="speed"></span></strong>
         </p>
         <section>
-          <span class="emoji">☀️</span><span id="weather-degree">14</span><small>°C</small width="1px" >
+          <span class="emoji">☀️</span><span id="weather-degree"></span><small>°C</small width="1px" >
         </section>
       </div>
   </main> 
