Injected Weather Icon

--- a/index.html
+++ b/index.html
@@ -26,14 +26,15 @@
           <strong><span id="speed"></span></strong>
         </p>
         <section>
-          <span class="emoji">☀️</span><span id="weather-degree"></span><small>°C</small width="1px" >
+          <div id="emoji">
+            </div><span id="weather-degree"></span><small>°C</small width="1px" >
         </section>
       </div>
   </main> 
     <footer>
-        This project was coded by <a href="https://github.com/YariFariba-art">Fariba Yari </a> 
-        and is<a href="https://github.com/YariFariba-art/weather-search-website"> on GitHub</a> 
-        and <a href="https://www.netlify.com/">hosted on Netlify</a>
+        This project was coded by <a href="https://github.com/YariFariba-art" target = blank>  Fariba Yari </a> 
+        and is<a href="https://github.com/YariFariba-art/weather-search-website" target = blank> on GitHub</a> 
+        and <a href="https://www.netlify.com/" target = blank >hosted on Netlify</a>
     </footer>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
